@@ -39,7 +39,7 @@
         </size>
     </property>
     <property name="caption">
-        <string>qsampler</string>
+        <string>Qsampler</string>
     </property>
     <property name="icon">
         <pixmap>qsampler.png</pixmap>
