@@ -41,7 +41,7 @@
         </sizepolicy>
     </property>
     <property name="caption">
-        <string>qsampler: Options</string>
+        <string>Qsampler: Options</string>
     </property>
     <property name="sizeGripEnabled">
         <bool>true</bool>
