@@ -5,6 +5,9 @@ ChangeLog
 
 CVS HEAD
 
+* All widget captions changed to include proper application
+  title name prefix.
+
 * Attempt to bring those aging autoconf templates to date;
   sample SPEC file for RPM build is now being included and
   generated at configure time.
